# hard-engineering-strategy

./: .env.example  .gitignore  CLAUDE.md  docker-compose.hardness.yml  docker-compose.prod.yml  hardness-engineering user guidance.md  hardness_engineering_strategy.md  harness-engineering user guidance.md  harness_engineering_strategy.md  pyproject.toml
.claude/: settings.json
.claude/agents/: harness-governor.md
.claude/skills/: harness.md
.harness/: config.yaml
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/hardness/: backup.py  rag.py  (+11 more)
backend/tests/: test_benchmarks.py  test_context_manager.py  test_errors.py  test_evaluator.py  test_governance.py  test_governance_enhanced.py  test_metrics.py  test_middleware.py  test_notification.py  test_planner.py  test_rag.py  test_security.py  test_task_memory.py  test_token_optimizer.py  test_tool_registry.py
docker/: hardness-orchestrator.Dockerfile  hardness-sandbox.Dockerfile  sandbox-policy.json
docker/alertmanager/: alertmanager.yml
docker/nginx/: nginx.conf  nginx.prod.conf
docker/prometheus/: prometheus.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.tsx
harness_plugin/: __init__.py  benchmarks.py  cli.py  hooks.py  project_config.py
scripts/: dev-setup.sh
tests/: test_benchmarks.py  test_evaluator.py  test_governance.py  test_metrics.py  test_planner.py  test_task_memory.py  test_token_optimizer.py  test_tool_registry.py
(+32 files in other folders)
