[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-plugin"
version = "1.0.0"
description = "Harness Engineering: governance, evaluation, and task planning for Claude Code"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Harness Engineering Team"}]
keywords = ["claude-code", "governance", "ai-agent", "code-review", "plugin"]

dependencies = [
    "pydantic>=2.10.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
]

[project.scripts]
harness = "harness_plugin.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness_plugin*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
